[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/ezgif-1-fb1427bd2f.png" type="Texture" id=1]
[ext_resource path="res://assets/lockonfix.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/Video Game Explosion Sound Effect.mp3" type="AudioStream" id=3]
[ext_resource path="res://Objects/homing_missile.gd" type="Script" id=4]
[ext_resource path="res://assets/Explosion4/0001.png" type="Texture" id=5]
[ext_resource path="res://assets/Explosion4/0003.png" type="Texture" id=6]
[ext_resource path="res://assets/Explosion4/0002.png" type="Texture" id=7]
[ext_resource path="res://assets/Explosion4/0004.png" type="Texture" id=8]
[ext_resource path="res://assets/Explosion4/0005.png" type="Texture" id=9]
[ext_resource path="res://assets/Explosion4/0006.png" type="Texture" id=10]
[ext_resource path="res://assets/Explosion4/0009.png" type="Texture" id=11]
[ext_resource path="res://assets/Explosion4/0020.png" type="Texture" id=12]
[ext_resource path="res://assets/Explosion4/0007.png" type="Texture" id=13]
[ext_resource path="res://assets/Explosion4/0008.png" type="Texture" id=14]
[ext_resource path="res://assets/Explosion4/0010.png" type="Texture" id=15]
[ext_resource path="res://assets/Explosion4/0011.png" type="Texture" id=16]
[ext_resource path="res://assets/Explosion4/0012.png" type="Texture" id=17]
[ext_resource path="res://assets/Explosion4/0013.png" type="Texture" id=18]
[ext_resource path="res://assets/Explosion4/0014.png" type="Texture" id=19]
[ext_resource path="res://assets/Explosion4/0015.png" type="Texture" id=20]
[ext_resource path="res://assets/Explosion4/0018.png" type="Texture" id=22]
[ext_resource path="res://assets/Explosion4/0016.png" type="Texture" id=27]
[ext_resource path="res://assets/Explosion4/0017.png" type="Texture" id=28]
[ext_resource path="res://assets/Explosion4/0019.png" type="Texture" id=29]

[sub_resource type="CircleShape2D" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 1600, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 2000, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 2400, 0, 400, 400 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 2800, 0, 400, 400 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 22 ), ExtResource( 29 ), ExtResource( 12 ) ],
"loop": true,
"name": "explode",
"speed": 25.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 32.0

[node name="Homing_Area2D" type="Area2D"]
collision_mask = 3
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 24, 0 )
shape = SubResource( 11 )

[node name="gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Animation" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 9 )
frame = 3

[node name="ExplosionArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 10 )

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="KasperPlayerHitTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Homing_Area2D_body_entered"]
[connection signal="finished" from="gunshot" to="." method="_on_gunshot_finished"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_ExplosionArea_body_entered"]
[connection signal="timeout" from="KasperPlayerHitTimer" to="." method="_on_KasperPlayerHitTimer_timeout"]
